--- a/Starter_Code/Starter_Code.ipynb
+++ b/Starter_Code/Starter_Code.ipynb
@@ -769,43 +769,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type int).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Train the model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m fit_model \u001b[38;5;241m=\u001b[39m \u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\envs\\dev\\lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\envs\\dev\\lib\\site-packages\\tensorflow\\python\\framework\\constant_op.py:103\u001b[0m, in \u001b[0;36mconvert_to_eager_tensor\u001b[1;34m(value, ctx, dtype)\u001b[0m\n\u001b[0;32m    101\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m dtypes\u001b[38;5;241m.\u001b[39mas_dtype(dtype)\u001b[38;5;241m.\u001b[39mas_datatype_enum\n\u001b[0;32m    102\u001b[0m ctx\u001b[38;5;241m.\u001b[39mensure_initialized()\n\u001b[1;32m--> 103\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mEagerTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type int)."
-     ]
-    }
-   ],
-   "source": [
-    "# Train the model\n",
-    "fit_model = nn.fit(X_train, y_train, epochs=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Epoch 1/100\n",
       "WARNING:tensorflow:From c:\\Users\\micha\\anaconda3\\envs\\dev\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
       "\n",
       "WARNING:tensorflow:From c:\\Users\\micha\\anaconda3\\envs\\dev\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "268/268 - 1s - loss: 0.7130 - accuracy: 0.5163 - 663ms/epoch - 2ms/step\n",
-      "Loss: 0.712985634803772, Accuracy: 0.5162681937217712\n"
+      "804/804 [==============================] - 2s 1ms/step - loss: 0.5706 - accuracy: 0.7228\n",
+      "Epoch 2/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5587 - accuracy: 0.7286\n",
+      "Epoch 3/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5554 - accuracy: 0.7303\n",
+      "Epoch 4/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5541 - accuracy: 0.7321\n",
+      "Epoch 5/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5524 - accuracy: 0.7315\n",
+      "Epoch 6/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5521 - accuracy: 0.7329\n",
+      "Epoch 7/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5504 - accuracy: 0.7333\n",
+      "Epoch 8/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5507 - accuracy: 0.7336\n",
+      "Epoch 9/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5496 - accuracy: 0.7344\n",
+      "Epoch 10/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5487 - accuracy: 0.7333\n",
+      "Epoch 11/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5487 - accuracy: 0.7355\n",
+      "Epoch 12/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5482 - accuracy: 0.7348\n",
+      "Epoch 13/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5477 - accuracy: 0.7347\n",
+      "Epoch 14/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5472 - accuracy: 0.7356\n",
+      "Epoch 15/100\n",
+      "804/804 [==============================] - 1s 979us/step - loss: 0.5474 - accuracy: 0.7353\n",
+      "Epoch 16/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5467 - accuracy: 0.7362\n",
+      "Epoch 17/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5466 - accuracy: 0.7356\n",
+      "Epoch 18/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5461 - accuracy: 0.7370\n",
+      "Epoch 19/100\n",
+      "804/804 [==============================] - 1s 996us/step - loss: 0.5456 - accuracy: 0.7366\n",
+      "Epoch 20/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5459 - accuracy: 0.7361\n",
+      "Epoch 21/100\n",
+      "804/804 [==============================] - 1s 996us/step - loss: 0.5456 - accuracy: 0.7372\n",
+      "Epoch 22/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5456 - accuracy: 0.7369\n",
+      "Epoch 23/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5449 - accuracy: 0.7378\n",
+      "Epoch 24/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5451 - accuracy: 0.7374\n",
+      "Epoch 25/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5445 - accuracy: 0.7381\n",
+      "Epoch 26/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5446 - accuracy: 0.7373\n",
+      "Epoch 27/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5440 - accuracy: 0.7379\n",
+      "Epoch 28/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5437 - accuracy: 0.7377\n",
+      "Epoch 29/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5437 - accuracy: 0.7372\n",
+      "Epoch 30/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5435 - accuracy: 0.7362\n",
+      "Epoch 31/100\n",
+      "804/804 [==============================] - 1s 978us/step - loss: 0.5442 - accuracy: 0.7371\n",
+      "Epoch 32/100\n",
+      "804/804 [==============================] - 1s 971us/step - loss: 0.5434 - accuracy: 0.7374\n",
+      "Epoch 33/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5429 - accuracy: 0.7377\n",
+      "Epoch 34/100\n",
+      "804/804 [==============================] - 1s 983us/step - loss: 0.5429 - accuracy: 0.7373\n",
+      "Epoch 35/100\n",
+      "804/804 [==============================] - 1s 989us/step - loss: 0.5427 - accuracy: 0.7385\n",
+      "Epoch 36/100\n",
+      "804/804 [==============================] - 1s 982us/step - loss: 0.5423 - accuracy: 0.7388\n",
+      "Epoch 37/100\n",
+      "804/804 [==============================] - 1s 993us/step - loss: 0.5426 - accuracy: 0.7379\n",
+      "Epoch 38/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5423 - accuracy: 0.7377\n",
+      "Epoch 39/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5420 - accuracy: 0.7367\n",
+      "Epoch 40/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5417 - accuracy: 0.7388\n",
+      "Epoch 41/100\n",
+      "804/804 [==============================] - 1s 998us/step - loss: 0.5423 - accuracy: 0.7379\n",
+      "Epoch 42/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5418 - accuracy: 0.7387\n",
+      "Epoch 43/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5421 - accuracy: 0.7384\n",
+      "Epoch 44/100\n",
+      "804/804 [==============================] - 1s 995us/step - loss: 0.5418 - accuracy: 0.7381\n",
+      "Epoch 45/100\n",
+      "804/804 [==============================] - 1s 979us/step - loss: 0.5412 - accuracy: 0.7393\n",
+      "Epoch 46/100\n",
+      "804/804 [==============================] - 1s 990us/step - loss: 0.5413 - accuracy: 0.7381\n",
+      "Epoch 47/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5416 - accuracy: 0.7378\n",
+      "Epoch 48/100\n",
+      "804/804 [==============================] - 1s 979us/step - loss: 0.5411 - accuracy: 0.7383\n",
+      "Epoch 49/100\n",
+      "804/804 [==============================] - 1s 981us/step - loss: 0.5408 - accuracy: 0.7391\n",
+      "Epoch 50/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5411 - accuracy: 0.7402\n",
+      "Epoch 51/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5408 - accuracy: 0.7384\n",
+      "Epoch 52/100\n",
+      "804/804 [==============================] - 1s 982us/step - loss: 0.5407 - accuracy: 0.7394\n",
+      "Epoch 53/100\n",
+      "804/804 [==============================] - 1s 979us/step - loss: 0.5412 - accuracy: 0.7386\n",
+      "Epoch 54/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5406 - accuracy: 0.7390\n",
+      "Epoch 55/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5403 - accuracy: 0.7389\n",
+      "Epoch 56/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5403 - accuracy: 0.7393\n",
+      "Epoch 57/100\n",
+      "804/804 [==============================] - 1s 965us/step - loss: 0.5407 - accuracy: 0.7388\n",
+      "Epoch 58/100\n",
+      "804/804 [==============================] - 1s 958us/step - loss: 0.5406 - accuracy: 0.7397\n",
+      "Epoch 59/100\n",
+      "804/804 [==============================] - 1s 998us/step - loss: 0.5402 - accuracy: 0.7392\n",
+      "Epoch 60/100\n",
+      "804/804 [==============================] - 1s 996us/step - loss: 0.5403 - accuracy: 0.7397\n",
+      "Epoch 61/100\n",
+      "804/804 [==============================] - 1s 989us/step - loss: 0.5397 - accuracy: 0.7390\n",
+      "Epoch 62/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5401 - accuracy: 0.7398\n",
+      "Epoch 63/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5400 - accuracy: 0.7393\n",
+      "Epoch 64/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5396 - accuracy: 0.7401\n",
+      "Epoch 65/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5396 - accuracy: 0.7401\n",
+      "Epoch 66/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5394 - accuracy: 0.7394\n",
+      "Epoch 67/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5397 - accuracy: 0.7394\n",
+      "Epoch 68/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5398 - accuracy: 0.7393\n",
+      "Epoch 69/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5395 - accuracy: 0.7392\n",
+      "Epoch 70/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5396 - accuracy: 0.7406\n",
+      "Epoch 71/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5396 - accuracy: 0.7397\n",
+      "Epoch 72/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5388 - accuracy: 0.7397\n",
+      "Epoch 73/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5391 - accuracy: 0.7404\n",
+      "Epoch 74/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5389 - accuracy: 0.7397\n",
+      "Epoch 75/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5394 - accuracy: 0.7399\n",
+      "Epoch 76/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5391 - accuracy: 0.7395\n",
+      "Epoch 77/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5393 - accuracy: 0.7401\n",
+      "Epoch 78/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5390 - accuracy: 0.7397\n",
+      "Epoch 79/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5391 - accuracy: 0.7398\n",
+      "Epoch 80/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5390 - accuracy: 0.7399\n",
+      "Epoch 81/100\n",
+      "804/804 [==============================] - 1s 999us/step - loss: 0.5387 - accuracy: 0.7402\n",
+      "Epoch 82/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5387 - accuracy: 0.7396\n",
+      "Epoch 83/100\n",
+      "804/804 [==============================] - 1s 994us/step - loss: 0.5386 - accuracy: 0.7390\n",
+      "Epoch 84/100\n",
+      "804/804 [==============================] - 1s 985us/step - loss: 0.5388 - accuracy: 0.7406\n",
+      "Epoch 85/100\n",
+      "804/804 [==============================] - 1s 987us/step - loss: 0.5388 - accuracy: 0.7406\n",
+      "Epoch 86/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5385 - accuracy: 0.7396\n",
+      "Epoch 87/100\n",
+      "804/804 [==============================] - 1s 991us/step - loss: 0.5388 - accuracy: 0.7400\n",
+      "Epoch 88/100\n",
+      "804/804 [==============================] - 1s 984us/step - loss: 0.5384 - accuracy: 0.7399\n",
+      "Epoch 89/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5384 - accuracy: 0.7397\n",
+      "Epoch 90/100\n",
+      "804/804 [==============================] - 1s 994us/step - loss: 0.5380 - accuracy: 0.7402\n",
+      "Epoch 91/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5382 - accuracy: 0.7403\n",
+      "Epoch 92/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5383 - accuracy: 0.7396\n",
+      "Epoch 93/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5388 - accuracy: 0.7404\n",
+      "Epoch 94/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5383 - accuracy: 0.7406\n",
+      "Epoch 95/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5382 - accuracy: 0.7407\n",
+      "Epoch 96/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5381 - accuracy: 0.7403\n",
+      "Epoch 97/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5383 - accuracy: 0.7403\n",
+      "Epoch 98/100\n",
+      "804/804 [==============================] - 1s 992us/step - loss: 0.5383 - accuracy: 0.7397\n",
+      "Epoch 99/100\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5383 - accuracy: 0.7409\n",
+      "Epoch 100/100\n",
+      "804/804 [==============================] - 1s 1000us/step - loss: 0.5379 - accuracy: 0.7411\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "fit_model = nn.fit(X_train_scaled, y_train, epochs=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 0s - loss: 0.5646 - accuracy: 0.7221 - 330ms/epoch - 1ms/step\n",
+      "Loss: 0.5645809769630432, Accuracy: 0.7220991253852844\n"
      ]
     }
    ],
